--- a/Backend/package.json
+++ b/Backend/package.json
@@ -25,6 +25,7 @@
     "formidable": "^3.5.4",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.16.4",
+    "nodemon": "^3.1.10",
     "openai": "^6.3.0",
     "p-limit": "^7.1.1",
     "socket.io": "^4.8.1",
