--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -21,11 +21,7 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "lucide-react": "^0.546.0",
-    "class-variance-authority": "^0.7.1",
-    "clsx": "^2.1.1",
-    "lucide-react": "^0.546.0",
     "react": "^19.1.0",
-    "react-day-picker": "^9.11.1",
     "react-day-picker": "^9.11.1",
     "react-dom": "^19.1.0",
     "react-hot-toast": "^2.6.0",
@@ -33,6 +29,7 @@
     "react-router-dom": "^7.9.4",
     "react-toastify": "^11.0.5",
     "shadcn-ui": "^0.9.5",
+    "socket.io": "^4.8.1",
     "socket.io-client": "^4.8.1",
     "tailwindcss": "^4.1.16",
     "tailwindcss-animate": "^1.0.7",
