--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -16,7 +16,7 @@
     "@fontsource/montserrat": "^5.2.8",
     "@mui/icons-material": "^7.3.4",
     "@mui/material": "^7.3.4",
-    "@tailwindcss/vite": "^4.1.11",
+    "@tailwindcss/vite": "^4.1.16",
     "@types/typescript": "^0.4.29",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
@@ -33,8 +33,6 @@
     "react-router-dom": "^7.9.4",
     "react-toastify": "^11.0.5",
     "shadcn-ui": "^0.9.5",
-    "socket.io-client": "^4.8.1",
-    "tailwindcss": "^4.1.16",
     "tailwindcss-animate": "^1.0.7",
     "zod": "^4.1.12"
   },
@@ -45,13 +43,16 @@
     "@types/react-dom": "^19.1.6",
     "@typescript-eslint/parser": "^8.46.2",
     "@vitejs/plugin-react": "^4.7.0",
-    "daisyui": "^5.0.48",
+    "autoprefixer": "^10.4.21",
+    "daisyui": "^5.3.10",
     "eslint": "^9.32.0",
     "eslint-plugin-react-hooks": "^5.2.0",
     "eslint-plugin-react-refresh": "^0.4.20",
     "globals": "^16.3.0",
+    "postcss": "^8.5.6",
     "prettier": "^3.6.2",
     "rimraf": "^6.0.1",
+    "tailwindcss": "^4.1.16",
     "typescript": "~5.8.3",
     "typescript-eslint": "^8.38.0",
     "vite": "^7.0.6"
