--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "wbs-ts-travel-journal-spa",
+  "name": "travel-me-frontend",
   "private": true,
   "version": "0.0.0",
   "type": "module",
